<resources>
    <string name="app_name">TvSeries</string>
    <string name="title_series">Series</string>
    <string name="title_people">People</string>
    <string name="search_hint">Series Name</string>
    <string name="series_detail_title">Series Details</string>
    <string name="episode_detail_title">Episode Details</string>
    <string name="series_detail_aired_info">%1$s at %2$s on %3$s.</string>
    <string name="series_detail_aired">%1$s - %2$s</string>
    <string name="now">now</string>
    <string name="episodes_label">Episodes</string>
    <string name="season_number">Season %d</string>
    <string name="undefined_season">Unknown season</string>
    <string name="episode_label">Season %1$d episode %2$d</string>
    <string name="episode_premiered_label">Premiered on %s</string>
    <string name="search_alert">Searching Series</string>
    <string name="not_results_found">No results found for %s</string>
    <string name="error_alert">Sorry!</string>
    <string name="error_alert_description">Oh no! we are having problems right now \n\n%s</string>
    <string name="retry">Retry</string>
    <string name="please_check_internet">Please check your internet connection</string>
    <string name="unable_to_load_episodes">We could not load episodes for this series at this moment please try again later</string>
    <string name="unknown_error_message">Unknown Error</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="enable_fingerprint">Enable fingerprint</string>
    <string name="enable_pin_code">Enable pin code</string>
    <string name="set_pin_code">Set pin code</string>
    <string name="pin_code">Pin Code</string>
    <string name="access">Access</string>
    <string name="pin_lock_error">Please enable pin lock from settings</string>
    <string name="wrong_pin">Wrong pin!</string>
    <string name="biometrics_title">Biometric Authentication</string>
    <string name="biometrics_subtitle">Enter biometric credentials to proceed.</string>
    <string name="biometrics_description">Input your Fingerprint or FaceID to ensure it\'s you!</string>
    <string name="biometrics_error">Error unlocking</string>
</resources>