<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:contentDescription="@string/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/lock_screen"
        android:contentDescription="@string/lock_screen"
        android:title="@string/lock_screen"
        app:showAsAction="never" />
</menu>